DeploymentStaging/deployPackage/objects/HOG_Service_Rig_Program__c.object
<CustomObject>
    <description>An encapsulating object for Service Rig Prgram information needed for an approval process to begin work on a a Service Rig.</description>
    <fields>
        <fullName>Approval_Type__c</fullName>
        <formula>IF($UserRole.DeveloperName == &apos;Production_Coordinators&apos;, &apos;Financial Approval&apos;, IF($UserRole.DeveloperName == &apos;Service_Rig_Coordinator&apos;, &apos;Technical Approval&apos;, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Service Rig Programs</relationshipLabel>
        <relationshipName>Service_Rig_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CW_Status__c</fullName>
        <formula>TEXT(HOG_Service_Request_Notification_Form__r.Location_Lookup__r.Current_Well_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CW Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Well_Status__c</fullName>
        <formula>Well_Location__r.Statusicon__c</formula>
        <label>Current Well Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Service Rig Programs</relationshipLabel>
        <relationshipName>Service_Rig_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Senior__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Senior</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Rig_Programs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>H2S_Test__c</fullName>
        <formula>IF(H2S__c == &apos;Y&apos;, &apos;Hazardous H2S on site&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>H2S Test</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H2S__c</fullName>
        <formula>Well_Location__r.Hazardous_H2S__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>H2S</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOG_Service_Request_Notification_Form_Id__c</fullName>
        <description>Just for OnClickButton.</description>
        <formula>HOG_Service_Request_Notification_Form__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HOG_Service_Request_Notification_Form_Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOG_Service_Request_Notification_Form__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Foreign Key to Service Notification Request.</description>
        <label>Service Notification Request</label>
        <referenceTo>HOG_Service_Request_Notification_Form__c</referenceTo>
        <relationshipLabel>Service Rig Programs</relationshipLabel>
        <relationshipName>Service_Rig_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification_Number__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.Notification_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notification Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operating_District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operating District</label>
        <referenceTo>Operating_District__c</referenceTo>
        <relationshipLabel>Service Rig Programs</relationshipLabel>
        <relationshipName>Service_Rig_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operating_Field_AMU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operating Field (AMU)</label>
        <referenceTo>Field__c</referenceTo>
        <relationshipLabel>Service Rig Programs</relationshipLabel>
        <relationshipName>Service_Rig_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operations_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operations Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Rig_Programs5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operator_Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operator Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>Service Rig Programs</relationshipLabel>
        <relationshipName>Service_Rig_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PVR_AVGVOL_5D_COND__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.PVR_AVGVOL_5D_COND__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5 Days Condensate (m3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PVR_AVGVOL_5D_GAS__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.PVR_AVGVOL_5D_GAS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5 Days Gas (m3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PVR_AVGVOL_5D_LAST_MEASURED__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.PVR_AVGVOL_5D_LAST_MEASURED__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5 Days Last Measured Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PVR_AVGVOL_5D_NO_OF_MEASURES__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.PVR_AVGVOL_5D_NO_OF_MEASURES__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5 Days Number Of Measures</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PVR_AVGVOL_5D_OIL__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.PVR_AVGVOL_5D_OIL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5 Days Oil (m3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PVR_AVGVOL_5D_PROD__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.PVR_AVGVOL_5D_PROD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5 Days Production (m3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PVR_AVGVOL_5D_SAND__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.PVR_AVGVOL_5D_SAND__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5 Days Sand (m3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PVR_AVGVOL_5D_WATER__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.PVR_AVGVOL_5D_WATER__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>5 Days Water (m3)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PVR_AVGVOL_UPDATED__c</fullName>
        <formula>Well_Location__r.PVR_AVGVOL_UPDATED__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PVR Average Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Partner_Well__c</fullName>
        <label>Partner Well?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.HOG_Notification_Type_Priority__r.Priority_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Production coordinator whose financial approval is required for Approval.</description>
        <inlineHelpText>Set this as the user who can grant financial approval to this Service Rig Program.</inlineHelpText>
        <label>Production Coordinator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>Production_Coordinators</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Rig_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Rig_Programs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Production Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Rig_Programs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rig_Program_Number__c</fullName>
        <label>Rig Program #</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Route_Operator_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route Operator 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Rig_Programs7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_Operator_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route Operator 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Rig_Programs8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_Operator_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route Operator 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Rig_Programs9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Rig_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who can grant technical approval for the Service Rig Program.</description>
        <inlineHelpText>Set this to an User who can grant Technical Approval for the Service Rig Program.</inlineHelpText>
        <label>Service Rig Coordinator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>Service_Rig_Coordinator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Rig_Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Rig_Planner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Rig Planner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Standard HOG - Administrator, Standard HOG - General User, System Administrator</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Rig_Programs6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Rig_Program_Comments__c</fullName>
        <label>Service Rig Program Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Rig_Request_Reason__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.HOG_Work_Order_Type__r.Service_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Rig Request Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.HOG_Work_Order_Type__r.HOG_Notification_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Service Rig Program Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Surface_Location__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.Location_Lookup__r.Surface_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Surface Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Company__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.Vendor_Company__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Well_Down_Date__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.Well_down__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Well Down Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Well_Event_Status__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.Functional_Location_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Well Event Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Well_Event__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Foreign Key to Location.</description>
        <label>Well Event</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Service Rig Programs</relationshipLabel>
        <relationshipName>Service_Rig_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Well_Location_Name__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.Location_Lookup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Well Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Well_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup for Well Location Detail to be displayed on the Service Rig Program page layout as a mini page layout for the appropriate well location layout.</description>
        <label>Well Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Service Rig Programs (Well Location)</relationshipLabel>
        <relationshipName>Service_Rig_Programs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Well_Orientation__c</fullName>
        <formula>HOG_Service_Request_Notification_Form__r.Location_Lookup__r.Well_Orientation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Well Orientation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Well_Status_Reason__c</fullName>
        <formula>TEXT(HOG_Service_Request_Notification_Form__r.Well_Tracker__r.Well_Status_Reason__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Well Status Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Details__c</fullName>
        <label>Work Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <label>Work Order #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Service Rig Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>HOG_Service_Request_Notification_Form__c</columns>
        <columns>Well_Event__c</columns>
        <columns>Production_Coordinator__c</columns>
        <columns>Service_Rig_Coordinator__c</columns>
        <columns>Production_Engineer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SRP-{0000000000}</displayFormat>
        <label>Service Rig Program Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Rig Programs</pluralLabel>
    <recordTypes>
        <fullName>Approved_Service_Rig_Program</fullName>
        <active>true</active>
        <description>Record Type for an Approved Service Rig Program</description>
        <label>Approved Service Rig Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Service_Rig_Program</fullName>
        <active>true</active>
        <description>Default record type for Service Rig Program.</description>
        <label>New Service Rig Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_Approval_Service_Rig_Program</fullName>
        <active>true</active>
        <description>Default record type for Service Rig Program.</description>
        <label>Pre Approval Service Rig Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Released_Service_Rig_Program</fullName>
        <active>true</active>
        <description>Record Type for a Released Service Rig Program</description>
        <label>Released Service Rig Program</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Approval_Status_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp;
(ISPICKVAL(Status__c, &apos;Awaiting Approval&apos;) || ISPICKVAL(Status__c, &apos;Approved&apos;))</errorConditionFormula>
        <errorMessage>Cannot manually trigger Approval Workflow statuses (Awaiting Approval, Approved).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISCHANGED(Status__c),
(ISPICKVAL(Status__c, &apos;New&apos;) &amp;&amp; !ISNEW()) ||
(ISPICKVAL(Status__c, &apos;Started&apos;) &amp;&amp; (TEXT(PRIORVALUE(Status__c)) &lt;&gt; &apos;New&apos; &amp;&amp;  TEXT(PRIORVALUE(Status__c)) &lt;&gt; &apos;On Hold&apos;)) ||
(ISPICKVAL(Status__c, &apos;On Hold&apos;) &amp;&amp; (TEXT(PRIORVALUE(Status__c)) &lt;&gt; &apos;New&apos; &amp;&amp;  TEXT(PRIORVALUE(Status__c)) &lt;&gt; &apos;Started&apos; &amp;&amp; TEXT(PRIORVALUE(Status__c)) &lt;&gt; &apos;Awaiting Approval&apos;)) ||
(ISPICKVAL(Status__c, &apos;Cancelled&apos;) &amp;&amp; (TEXT(PRIORVALUE(Status__c)) &lt;&gt; &apos;New&apos; &amp;&amp;  TEXT(PRIORVALUE(Status__c)) &lt;&gt; &apos;Started&apos; &amp;&amp; TEXT(PRIORVALUE(Status__c)) &lt;&gt; &apos;On Hold&apos; &amp;&amp; TEXT(PRIORVALUE(Status__c)) &lt;&gt; &apos;Awaiting Approval&apos;)),
false)</errorConditionFormula>
        <errorMessage>Rig Program status should be: New (Once the notification is created), Started (after New or On Hold), On Hold (After New, Awaiting Approval or Started), Cancelled (After New, On Hold. Awaiting Approval or Started)</errorMessage>
    </validationRules>
</CustomObject>